<resources>
    <string name="app_name">Popular Movies</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>

    <string name="settings_title">Sort By</string>
    <string name="sort_by_key">sortBy</string>
    <string name="sort_by_default" translatable="false">popular</string>

    <string name="sort_by_label_popular">Most Popular Movies</string>
    <string name="sort_by_label_top_rated">Top Rated Movies</string>
    <string name="sort_by_label_favourites">My Favourite Movies</string>

    <string name="sort_by_popular" translatable="false">popular</string>
    <string name="sort_by_top_rated" translatable="false">top_rated</string>
    <string name="sort_by_favourites" translatable="false">user_fav</string>

    <string name="releaseDateTitle">Release Date</string>
    <string name="userRatingTitle">User Rating</string>
    <string name="synopsisTitle">Synopsis</string>

    <string name="SettingsActivityLabel">Settings</string>
    <string name="DetailsActivityLabel">Details</string>

    <string name="trailers_title">Trailers :</string>
    <string name="reviews_title">Reviews :</string>

</resources>
