<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.shivam.popularmovies2.ui.DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="24dp"
            android:background="@color/colorPrimary"
            android:clickable="false"
            android:focusable="false"
            android:fontFamily="sans_serif"
            android:paddingBottom="24dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="24dp"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="32dp"
            android:textStyle="bold"
            tools:text="New Text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/thumbnail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginRight="16dp"
                    android:adjustViewBounds="true"
                    android:clickable="false"
                    android:focusable="false" />


                <TextView
                    android:id="@+id/releaseDateTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_toEndOf="@+id/thumbnail"
                    android:layout_toRightOf="@+id/thumbnail"
                    android:clickable="false"
                    android:focusable="false"
                    android:fontFamily="sans_serif"
                    android:text="@string/releaseDateTitle"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/textDark"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/releaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/releaseDateTitle"
                    android:layout_marginBottom="24dp"
                    android:layout_toEndOf="@+id/thumbnail"
                    android:layout_toRightOf="@+id/thumbnail"
                    android:clickable="false"
                    android:focusable="false"
                    android:fontFamily="sans_serif"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    tools:text="New Text" />

                <TextView
                    android:id="@+id/userRatingTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/releaseDate"
                    android:layout_marginBottom="2dp"
                    android:layout_toEndOf="@+id/thumbnail"
                    android:layout_toRightOf="@+id/thumbnail"
                    android:clickable="false"
                    android:focusable="false"
                    android:fontFamily="sans_serif"
                    android:text="@string/userRatingTitle"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/textDark"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/userRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/userRatingTitle"
                    android:layout_marginBottom="24dp"
                    android:layout_toEndOf="@+id/thumbnail"
                    android:layout_toRightOf="@+id/thumbnail"
                    android:clickable="false"
                    android:focusable="false"
                    android:fontFamily="sans_serif"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    tools:text="@string/userRatingTitle" />

                <ImageView
                    android:id="@+id/favourites_star"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/userRating"
                    android:layout_toEndOf="@+id/thumbnail"
                    android:layout_toRightOf="@+id/thumbnail"
                    tools:src="@android:drawable/btn_star_big_off" />

            </RelativeLayout>


            <TextView
                android:id="@+id/synopsisTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="64dp"
                android:clickable="false"
                android:focusable="false"
                android:fontFamily="sans_serif"
                android:text="@string/synopsisTitle"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/synopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/synopsisTitle"
                android:layout_marginBottom="64dp"
                android:clickable="false"
                android:focusable="false"
                android:fontFamily="sans_serif"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/textDark"
                android:textStyle="bold"
                tools:text="New Text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:focusable="false"
                android:clickable="false"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:clickable="false"
                android:focusable="false"
                android:text="@string/trailers_title"
                android:textAppearance="?android:textAppearanceLarge" />

            <com.github.paolorotolo.expandableheightlistview.ExpandableHeightListView
                android:id="@+id/listview_trailers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:descendantFocusability="blocksDescendants"
                android:clickable="true"
                android:layout_marginBottom="12dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:focusable="false"
                android:clickable="false"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:clickable="false"
                android:focusable="false"
                android:text="@string/reviews_title"
                android:textAppearance="?android:textAppearanceLarge" />

            <com.github.paolorotolo.expandableheightlistview.ExpandableHeightListView
                android:id="@+id/listview_reviews"
                android:layout_width="match_parent"
                android:focusable="false"
                android:clickable="false"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
